--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "spatie/laravel-permission": "^6.21"
+        "spatie/laravel-permission": "^6.21",
+        "tapp/filament-auditing": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
