added seeder to deploy file

--- a/.github/workflows/laravel_deploy.yml
+++ b/.github/workflows/laravel_deploy.yml
@@ -70,6 +70,7 @@ jobs:
               git pull origin main
               composer install --no-dev --optimize-autoloader
               php artisan migrate --force
+              php artisan db:seed --force
               php artisan config:cache
               php artisan route:cache
               php artisan view:cache
@@ -83,6 +84,7 @@ jobs:
               cp .env.example .env
               php artisan key:generate
               php artisan migrate --force
+              php artisan db:seed --force
               php artisan config:cache
               php artisan route:cache
               php artisan view:cache
