--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.21",
+        "spatie/laravel-translatable": "^6.11",
         "tapp/filament-auditing": "^3.0"
     },
     "require-dev": {
